# cohere_transcribe_rs

./: CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  integration-test.yml  release.yml
src/mlx/: array.rs  decoder.rs  encoder.rs  ffi.rs  ops.rs  stream.rs
